--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -40,9 +40,15 @@ jobs:
             # 3. Get latest code
             git pull origin main || git clone https://github.com/${{ github.repository }}.git .
             
-            # 4. Install requirements (from your requirements.txt)
+            # 4. Install requirements with the force flag
             pip3 install -r requirements.txt --break-system-packages
-            
-            # 5. Stop old version and start new version in background
-            pkill -f app.py || true
-            nohub ./venv/bin/python3 app.py > log.txt 2>&1 &
+
+           # 5. Stop old version and start new version properly
+           pkill -f app.py || true
+        
+           # We use the full path to python3 to ensure it starts correctly
+           nohup python3 app.py > log.txt 2>&1 &
+        
+           # Give the app 5 seconds to start so GitHub sees it is running
+           sleep 5
+           cat log.txt
