--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,40 +18,30 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install local dependencies (for testing)
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Deploy to Server via SSH
-        uses: appleboy/ssh-action@v1.0.3
-        with:
+      name: Deploy to Server via SSH
+      uses: appleboy/ssh-action@v1.0.3
+      with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SERVER_PORT }}
           script: |
-            # 1. Update system and install Python pip
+            # 1. Update and install dependencies
             sudo apt update && sudo apt install python3-pip -y
             
-            # 2. Go to app folder
+            # 2. Go to folder and get code
             mkdir -p ~/flask_app && cd ~/flask_app
-            
-            # 3. Get latest code
             git pull origin main || git clone https://github.com/${{ github.repository }}.git .
-            
-            # 4. Install requirements
+
+            # 3. Install requirements
             pip3 install -r requirements.txt --break-system-packages
+
+            # 4. Start and detach app properly
+            pkill -f app.py || true
+            nohup python3 app.py > log.txt 2>&1 &
+            sleep 2
+            disown
             
-           # 5. Restart the app
-           pkill -f app.py || true
-         
-           # Start and detach properly
-           nohup python3 app.py > log.txt 2>&1 &
-           sleep 2
-           disown
-        
-          # Final verification
-          ps aux | grep app.py
-          echo "Deployment successful"
-          exit 0
+            # 5. Final check
+            ps aux | grep app.py
+            exit 0
