--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,12 +3,11 @@ name: Deploy Flask App
 on:
   push:
     branches:
-      - main  # Runs when you push to the main branch
+      - main
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest  # Creates the Ubuntu environment
-
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -18,9 +17,9 @@ jobs:
         with:
           python-version: '3.10'
 
-      name: Deploy to Server via SSH
-      uses: appleboy/ssh-action@v1.0.3
-      with:
+      - name: Deploy to Server via SSH
+        uses: appleboy/ssh-action@v1.0.3
+        with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
@@ -33,15 +32,16 @@ jobs:
             mkdir -p ~/flask_app && cd ~/flask_app
             git pull origin main || git clone https://github.com/${{ github.repository }}.git .
 
-            # 3. Install requirements
+            # 3. Install requirements (Fixes PEP 668 error)
             pip3 install -r requirements.txt --break-system-packages
 
-            # 4. Start and detach app properly
+            # 4. Restart and detach app properly
             pkill -f app.py || true
             nohup python3 app.py > log.txt 2>&1 &
-            sleep 2
+            sleep 5
             disown
             
-            # 5. Final check
+            # 5. Success signals
             ps aux | grep app.py
+            echo "Deployment successful"
             exit 0
