--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,26 +1,53 @@
 name: Deploy Flask App
+
 on:
   push:
     branches:
       - main
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - name: SSH Deploy
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.SERVER_IP }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: 22
-          script: |
-            sudo apt update && sudo apt install python3-pip -y
-            mkdir -p ~/flask_app && cd ~/flask_app
-            git pull origin main || git clone https://github.com/${{ github.repository }}.git .
-            pip3 install -r requirements.txt --break-system-packages
-            pkill -f app.py || true
-            nohup python3 app.py > log.txt 2>&1 &
-            sleep 5
-            exit 0
+    # 1️⃣ Checkout code from GitHub
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    # 2️⃣ Set up Python
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.10'
+
+    # 3️⃣ Install dependencies locally (optional but recommended)
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    # 4️⃣ Copy project to server via SSH
+    - name: Deploy to server
+      uses: appleboy/scp-action@v0.1.7
+      with:
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USER }}
+        key: ${{ secrets.SERVER_SSH_KEY }}
+        source: "."
+        target: ${{ secrets.APP_DIR }}
+
+    # 5️⃣ SSH into server and run Flask app
+    - name: Run Flask on server
+      uses: appleboy/ssh-action@v1.0.3
+      with:
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USER }}
+        key: ${{ secrets.SERVER_SSH_KEY }}
+        script: |
+          cd ${{ secrets.APP_DIR }}
+          python3 -m venv venv
+          source venv/bin/activate
+          pip install --upgrade pip
+          pip install -r requirements.txt
+          pkill -f app.py || true
+          nohup python app.py > app.log 2>
