--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: Deploy Flask App to EC2
+name: Deploy Flask App to Amazon Linux EC2
 
 on:
   push:
@@ -7,30 +7,36 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest   # GitHub runner, NOT your EC2
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.9'
-
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
-
-      - name: Deploy via SSH
+      - name: Deploy via SSH to Amazon Linux
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          port: ${{ secrets.SERVER_PORT }}
+          host: ${{ secrets.SERVER_IP }}
+          username: ec2-user
           key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: 22
           script: |
-            cd /home/ec2-user/flask-app || exit 1
+            echo "Connected to Amazon Linux EC2"
+            cat /etc/os-release
+
+            sudo yum update -y
+            sudo yum install -y python3 python3-pip git
+
+            cd /home/ec2-user
+
+            if [ ! -d flask-app ]; then
+              git clone https://github.com/${{ github.repository }} flask-app
+            fi
+
+            cd flask-app
             git pull origin main
-            pip3 install -r requirements.txt
-            sudo systemctl restart flaskapp
+
+            pip3 install --user -r requirements.txt
+
+            pkill -f app.py || true
+            nohup python3 app.py > flask.lo
