--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest   # GitHub runner, NOT your EC2
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
@@ -21,10 +21,11 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
           script: |
-            echo "Connected to Amazon Linux EC2"
+            set -e
+
+            echo "Connected to EC2"
             cat /etc/os-release
 
-            sudo yum update -y
             sudo yum install -y python3 python3-pip git
 
             cd /home/ec2-user
@@ -38,5 +39,10 @@ jobs:
 
             pip3 install --user -r requirements.txt
 
+            # Kill old Flask process safely
             pkill -f app.py || true
-            nohup python3 app.py > flask.lo
+
+            # Start Flask app FULLY detached
+            nohup python3 app.py > flask.log 2>&1 < /dev/null & disown
+
+            echo "Flask app started successfully"
