--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: Deploy Flask App to Amazon Linux EC2
+name: Deploy Flask to Amazon Linux EC2
 
 on:
   push:
@@ -13,22 +13,21 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Deploy via SSH to Amazon Linux
+      - name: Deploy via SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_IP }}
           username: ec2-user
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
+          command_timeout: 30m
           script: |
             set -e
 
             echo "Connected to EC2"
-            cat /etc/os-release
+            cd /home/ec2-user
 
             sudo yum install -y python3 python3-pip git
-
-            cd /home/ec2-user
 
             if [ ! -d flask-app ]; then
               git clone https://github.com/${{ github.repository }} flask-app
@@ -39,10 +38,11 @@ jobs:
 
             pip3 install --user -r requirements.txt
 
-            # Kill old Flask process safely
+            echo "Stopping old Flask app if running"
             pkill -f app.py || true
 
-            # Start Flask app FULLY detached
-            nohup python3 app.py > flask.log 2>&1 < /dev/null & disown
+            echo "Starting Flask in background"
+            nohup python3 app.py > flask.log 2>&1 < /dev/null &
+            disown
 
-            echo "Flask app started successfully"
+            echo "Deployment completed successfully"
