--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   deploy:
@@ -16,18 +17,13 @@ jobs:
       - name: Deploy via SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: ${{ secrets.SERVER_IP }}
+          host: ${{ secrets.EC2_HOST }}
           username: ec2-user
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: 22
-          command_timeout: 30m
+          key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             set -e
 
-            echo "Connected to EC2"
             cd /home/ec2-user
-
-            sudo yum install -y python3 python3-pip git
 
             if [ ! -d flask-app ]; then
               git clone https://github.com/${{ github.repository }} flask-app
@@ -36,13 +32,14 @@ jobs:
             cd flask-app
             git pull origin main
 
-            pip3 install --user -r requirements.txt
+            python3 -m pip install --user --upgrade pip
+            python3 -m pip install --user -r requirements.txt
 
             echo "Stopping old Flask app if running"
             pkill -f app.py || true
 
-            echo "Starting Flask in background"
-            nohup python3 app.py > flask.log 2>&1 < /dev/null &
-            disown
+            echo "Starting Flask app in background"
+            nohup python3 app.py > flask.log 2>&1 &
 
-            echo "Deployment completed successfully"
+            disown
+            exit 0
